--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -20,11 +20,26 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JWA-6o-kaL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="JWA-6o-kaL" secondAttribute="trailing" id="QfW-Xd-laf"/>
+                            <constraint firstItem="JWA-6o-kaL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hLP-ae-YvK"/>
+                            <constraint firstItem="JWA-6o-kaL" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="nTs-gG-8g9"/>
+                            <constraint firstItem="JWA-6o-kaL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tdd-bh-hrj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="JWA-6o-kaL" id="QE3-az-EeD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
